# istind

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  main.lk  main.s  make.sh  x86.s
.github/: copilot-instructions.md
src/: analyze.rs  asm.rs  ir.rs  lib.rs  main.rs  synthesize.rs
src/analyze/: ast.rs  lex.rs  semantics.rs
src/analyze/ast/: parse.rs
src/analyze/lex/: token.rs
src/ir/: codegen.rs  lifetime.rs
src/synthesize/: arch.rs  exe.rs
src/synthesize/arch/: arm.rs
src/synthesize/arch/arm/: builtin.rs  instr.rs  reg.rs
src/synthesize/exe/: mac.rs
src/synthesize/exe/mac/: mach_o.rs
stdlib/: lib.bl
tests/: c_tests.rs  simple.rs
