[package]
name = "istind"
version = "0.1.0"
edition = "2024"

[dependencies]
apple-codesign = "0.29.0"
ariadne = "0.6.0"
bitflags = { version = "2.10.0" }
bytemuck = { version = "1.24.0", features = ["derive"] }
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
derive_more = { version = "2.1.1", features = ["full"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
ux = "0.1.6"
